test/syc/good/stnull.c
/*
 * Null statement
 */

int stnull(void)
{
	; /* Note that this produces a NOP */
	return 0;
}
