test/syc/bad/callnonfunc.c
/*
 * Called object is not a function.
 */

int x;

int main(void)
{
	x();
	return 0;
}
